Update plugin for 26.1.1 and reliability improvements